--- a/Natural Language Processing with Classification and Vector Spaces/Week 1/C1_W1_Assignment_Solution.ipynb
+++ b/Natural Language Processing with Classification and Vector Spaces/Week 1/C1_W1_Assignment_Solution.ipynb
@@ -73,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davidamat/.pyenv/versions/3.8.6/envs/nlp_env/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +336,7 @@
     "    \n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # calculate the sigmoid of z\n",
-    "    h = 1 / (1 + np.exp(-z))\n",
+    "    h = 1. / (1 + np.exp(-z))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return h"
@@ -335,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -556,6 +565,15 @@
     "    ### END CODE HERE ###\n",
     "    J = float(J)\n",
     "    return J, theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([[1,2,3,4,5]])"
    ]
   },
   {
@@ -1114,7 +1132,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1128,9 +1146,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
